Refine nginx config for health endpoints and request ids

--- a/infra/nginx/obd2-dashboard.conf
+++ b/infra/nginx/obd2-dashboard.conf
@@ -3,6 +3,12 @@ upstream dashboard_api {
   keepalive 64;
 }
 
+# Preserve/propagate request IDs if provided; otherwise generate one.
+map $http_x_request_id $req_id {
+  default $http_x_request_id;
+  "" $request_id;
+}
+
 server {
   listen 80;
   server_name your.domain;
@@ -21,6 +27,7 @@ server {
   proxy_set_header Host $host;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
+  proxy_set_header X-Request-ID $req_id;
 
   location /ws/agent {
     proxy_pass http://dashboard_api;
@@ -52,6 +59,15 @@ server {
   # General API
   location /api/ {
     proxy_pass http://dashboard_api;
+  }
+
+  # Health endpoints
+  location /healthz {
+    proxy_pass http://dashboard_api/healthz;
+  }
+
+  location /readyz {
+    proxy_pass http://dashboard_api/readyz;
   }
 
   # Static web app (adjust root to your build output)
