--- a/apps/dashboard-api/tsconfig.build.json
+++ b/apps/dashboard-api/tsconfig.build.json
@@ -6,5 +6,6 @@
       "@dashboard/shared/*": ["../../packages/shared/dist/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.spec.ts"]
 }
