--- a/apps/dashboard-api/.env.local
+++ b/apps/dashboard-api/.env.local
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://postgres:dashboard@localhost:5434/dashboard
+DATABASE_URL=postgresql://postgres:dashboard@localhost:5434/dashboard-postgres
 SESSION_SECRET=dev-session-secret
 # REDIS_URL=redis://localhost:6379
