Add npm scripts for local Redis

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test:bridge-agent:api": "npm run test:api --workspace apps/bridge-agent",
     "test:bridge-agent": "npm run test:bridge-agent:discovery && npm run test:bridge-agent:control-ws && npm run test:bridge-agent:api",
     "test:data-plane": "node infra/scripts/test-data-plane.js",
-    "dev:stack": "node infra/scripts/dev-stack.js"
+    "dev:stack": "node infra/scripts/dev-stack.js",
+    "dev:redis": "docker compose -f infra/docker-compose.redis.yml up -d",
+    "dev:redis:down": "docker compose -f infra/docker-compose.redis.yml down"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
