--- a/apps/dashboard-api/package.json
+++ b/apps/dashboard-api/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.22.0",
     "argon2": "^0.44.0",
     "connect-pg-simple": "^9.0.1",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
