--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,52 @@ jobs:
       - name: Build
         run: npm run build
 
+  e2e:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      - name: Install
+        run: npm ci
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+      - name: Start E2E stack
+        run: npm run e2e:up
+      - name: Prepare E2E data
+        run: npm run e2e:prepare
+      - name: Run E2E tests
+        run: npm run e2e:test
+      - name: Capture container logs
+        if: failure()
+        run: docker compose -f infra/docker-compose.e2e.yml logs --no-color > e2e-docker-logs.txt
+      - name: Upload Playwright report
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: apps/dashboard-e2e/playwright-report
+      - name: Upload Playwright test results
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-test-results
+          path: apps/dashboard-e2e/test-results
+      - name: Upload Docker logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-docker-logs
+          path: e2e-docker-logs.txt
+      - name: Shutdown E2E stack
+        if: always()
+        run: npm run e2e:down
+
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: test
