--- a/apps/dashboard-api/.env.example
+++ b/apps/dashboard-api/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL=postgresql://postgres:dashboard@localhost:5434/dashboard
 SESSION_SECRET=change-me
 REDIS_URL=redis://localhost:6379
+DONGLE_TOKEN_MASTER_KEY_V1=base64_32_bytes
+DONGLE_TOKEN_MASTER_KEY_DEFAULT_VERSION=1
