--- a/infra/nginx/obd2-dashboard.conf
+++ b/infra/nginx/obd2-dashboard.conf
@@ -70,6 +70,64 @@ server {
     proxy_pass http://dashboard_api/readyz;
   }
 
+  # Admin UIs (Postgres + Redis) protected by oauth2-proxy.
+  location = /db {
+    return 301 /db/;
+  }
+
+  location = /redis {
+    return 301 /redis/;
+  }
+
+  location /oauth2/ {
+    proxy_pass http://127.0.0.1:4180;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Auth-Request-Redirect $request_uri;
+  }
+
+  location /db/ {
+    auth_request /oauth2/auth;
+    error_page 401 = /oauth2/start?rd=$request_uri;
+    auth_request_set $auth_user $upstream_http_x_auth_request_user;
+    auth_request_set $auth_email $upstream_http_x_auth_request_email;
+    proxy_set_header X-Forwarded-User $auth_user;
+    proxy_set_header X-Auth-Request-Email $auth_email;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Script-Name /db;
+    proxy_set_header X-Forwarded-Prefix /db;
+    proxy_pass http://127.0.0.1:5050;
+  }
+
+  location /redis/socket.io/ {
+    auth_request /oauth2/auth;
+    error_page 401 = /oauth2/start?rd=$request_uri;
+    auth_request_set $auth_user $upstream_http_x_auth_request_user;
+    auth_request_set $auth_email $upstream_http_x_auth_request_email;
+    proxy_set_header X-Forwarded-User $auth_user;
+    proxy_set_header X-Auth-Request-Email $auth_email;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_pass http://127.0.0.1:5540;
+  }
+
+  location /redis/ {
+    auth_request /oauth2/auth;
+    error_page 401 = /oauth2/start?rd=$request_uri;
+    auth_request_set $auth_user $upstream_http_x_auth_request_user;
+    auth_request_set $auth_email $upstream_http_x_auth_request_email;
+    proxy_set_header X-Forwarded-User $auth_user;
+    proxy_set_header X-Auth-Request-Email $auth_email;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_pass http://127.0.0.1:5540;
+  }
+
   # Static web app (adjust root to your build output)
   location / {
     root /opt/obd2-dashboard/apps/dashboard-web/dist;
